add-input-text-component-using-control-value-accessor add-automatic-form-validation add-new-page-to-test-input-text-component-with-automatic-form-validation

--- a/projects/angular-enterprise-app/src/app/layouts/main-layout/components/left-side-bar/navigation-item/navigation-item.component.html
+++ b/projects/angular-enterprise-app/src/app/layouts/main-layout/components/left-side-bar/navigation-item/navigation-item.component.html
@@ -5,7 +5,7 @@
             hover:text-primary cursor-pointer
             focus:text-accent
             focus:bg-accent text-primary
-            focus:rounded-md" (click)="onRouteChanged(item)" [routerLink]="item.route" routerLinkActive="active">
+            focus:rounded-md" (click)="onRouteChanged(item.route)" [routerLink]="item.route" routerLinkActive="active">
         <div class="flex flex-row justify-start items-center gap-2">
             <mat-icon class="cursor-pointer icon" svgIcon="{{item.icon}}"></mat-icon>
             @if((isSideNavOpened$|async)) {
@@ -30,7 +30,9 @@
         <div class="flex flex-row justify-start items-center gap-2 cursor-pointer">
             <mat-icon class="cursor-pointer icon" svgIcon="{{item.icon}}"></mat-icon>
             @if((isSideNavOpened$|async)) {
-                <span class="font-normal text-sm xxl:text-lg" translate> {{ item.translationKey }} </span> 
+                <div class="items-center justify-center cursor-pointer font-normal text-sm xxl:text-lg px-4">
+                    <span translate> {{ item.translationKey }} </span> 
+                </div>
             }
         </div>
 
@@ -38,8 +40,8 @@
             @for ( subItem of item.subRouteItems; track subItem) {
                 <span mat-menu-item class="font-normal text-xs xxl:text-lg"
                         tabindex="0"
-                        (keydown.enter)="onRouteChanged(subItem)"
-                        (click)="onRouteChanged(subItem)"> 
+                        (keydown.enter)="onRouteChanged(item.route + '/' + subItem.route)"
+                        (click)="onRouteChanged(item.route + '/' + subItem.route)"> 
                     <span translate> {{subItem.translationKey}} </span>
                 </span>
             }
