--- a/projects/angular-enterprise-app/src/app/features/forms/components/input-reactive-forms/input-reactive-forms.component.html
+++ b/projects/angular-enterprise-app/src/app/features/forms/components/input-reactive-forms/input-reactive-forms.component.html
@@ -1,23 +1,23 @@
 <form [formGroup]="form" class="w-full h-full flex flex-col gap-4">
     <div class="w-full flex flex-wrap gap-4">
         <div class="flex flex-col gap-1 h-[6.4rem] flex-1 w-[18rem] min-w-[18rem] max-w-[19rem]">
-            <span>First Name*: </span>
+            <span translate> forms.input-reactive-forms.first-name </span>
             <ui-input-text formControlName="fristName" ></ui-input-text>
         </div>
         <div class="flex flex-col gap-1 h-[6.4rem] flex-1 w-[18rem] min-w-[18rem] max-w-[19rem]">
-            <span>Last Name*: </span>
+            <span translate>forms.input-reactive-forms.last-name </span>
             <ui-input-text formControlName="lastName" ></ui-input-text>
         </div>
         <div class="flex flex-col gap-1 h-[6.4rem] flex-1 w-[18rem] min-w-[18rem] max-w-[19rem]">
-            <span>Email Address*: </span>
+            <span translate>forms.input-reactive-forms.email-address </span>
             <ui-input-text formControlName="email" ></ui-input-text>
         </div>
         <div class="flex flex-col gap-1 h-[6.4rem] flex-1 w-[18rem] min-w-[18rem] max-w-[19rem]">
-            <span>Father's Name*: </span>
+            <span translate>forms.input-reactive-forms.fathers-name </span>
             <ui-input-text formControlName="fathersName" ></ui-input-text>
         </div>
         <div class="flex flex-col gap-1 h-[6.4rem] flex-1 w-[18rem] min-w-[18rem] max-w-[19rem]">
-            <span>Mother's Name*: </span>
+            <span translate>forms.input-reactive-forms.mothers-name </span>
             <ui-input-text formControlName="mothersName" ></ui-input-text>
         </div>
     </div>
